[Harish]Refactor: swagger for getCustomerDetails API and code Structuring
