# src/models/customerDetails.model.js
@@ -1,49 +1,49 @@
 import { Schema, model } from 'mongoose';
 
 const customerDetailsSchema = new Schema({
-    customerId: {
-        type: Schema.Types.ObjectId,
-        ref:"User",
-        required: true
-    },
+  customerId: {
+    type: Schema.Types.ObjectId,
+    ref: 'User',
+    required: true
+  },
 
-    fullName: {
+  fullName: {
+    type: String,
+    required: true
+  },
+  mobileNumber: {
+    type: String,
+    required: true
+  },
+  address: [
+    {
+      type: {
+        type: String,
+        enum: ['home', 'office', 'other'],
+        required: true
+      },
+      addressLine: {
         type: String,
         required: true
-    },
-    mobileNumber: {
+      },
+      city: {
         type: String,
         required: true
-    },
-    address: [
-        {
-            type: {
-                type: String,
-                enum: ['home', 'office', 'other'],
-                required: true
-            },
-            addressLine: {
-                type: String,
-                required: true
-            },
-            city: {
-                type: String,
-                required: true
-            },
-            state: {
-                type: String,
-                required: true
-            },
-            postalCode: {
-                type: String,
-                required: true
-            },
-            country: {
-                type: String,
-                required: true
-            }
-        }
-    ]
+      },
+      state: {
+        type: String,
+        required: true
+      },
+      postalCode: {
+        type: String,
+        required: true
+      },
+      country: {
+        type: String,
+        required: true
+      }
+    }
+  ]
 });
 
 export default model('CustomerDetails', customerDetailsSchema);
