# src/routes/index.js
@@ -11,7 +11,7 @@ import wishlistRoute from './wishlist.route';
 
 import orderRoute from './order.route';
 
-import customerRouter from './customerDetails.route'
+import customerRouter from './customerDetails.route';
 /**
  * Function contains Application routes
  *
@@ -31,7 +31,7 @@ const routes = () => {
 
   router.use('/order', orderRoute);
 
-  router.use('/customer', customerRouter)
+  router.use('/customer', customerRouter);
 
   return router;
 };
