# src/swagger/swagger.json
@@ -30,6 +30,10 @@
         {
             "name": "OrderDetails",
             "description": "All orders"
+        },
+        {
+            "name": "CustomerDetails",
+            "description": "All addresses"
         }
     ],
     "paths": {
@@ -518,7 +522,7 @@
         "/order": {
             "post": {
                 "tags": [
-                    "Order"
+                    "OrderDetails"
                 ],
                 "description": "Get order details.",
                 "security": [
@@ -533,6 +537,37 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/OrderDetails"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad request",
+                        "content": {}
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "content": {}
+                    }
+                }
+            }
+        },
+        "/customer": {
+            "post": {
+                "tags": ["CustomerDetails"],
+                "description": "Fetch customer details.",
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Customer details fetched successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/CustomerDetails"
                                 }
                             }
                         }
@@ -769,6 +804,65 @@
                         "format": "date-time"
                     }
                 }
+            },
+            "CustomerDetails": {
+                "type": "object",
+                "properties": {
+                    "customerId": {
+                        "type": "string"
+                    },
+                    "fullName": {
+                        "type": "string"
+                    },
+                    "mobileNumber": {
+                        "type": "string"
+                    },
+                    "address": {
+                        "type": "array",
+                        "items": {
+                            "type": "object",
+                            "properties": {
+                                "type": {
+                                    "type": "string",
+                                    "enum": [
+                                        "home",
+                                        "office",
+                                        "other"
+                                    ]
+                                },
+                                "addressLine": {
+                                    "type": "string"
+                                },
+                                "city": {
+                                    "type": "string"
+                                },
+                                "state": {
+                                    "type": "string"
+                                },
+                                "postalCode": {
+                                    "type": "string"
+                                },
+                                "country": {
+                                    "type": "string"
+                                }
+                            },
+                            "required": [
+                                "type",
+                                "addressLine",
+                                "city",
+                                "state",
+                                "postalCode",
+                                "country"
+                            ]
+                        }
+                    }
+                },
+                "required": [
+                    "customerId",
+                    "fullName",
+                    "mobileNumber",
+                    "address"
+                ]
             }
         },
         "securitySchemes": {
